# vivarium-nfsim

./: .gitignore  README.md  pyproject.toml  setup.py
demo/: demo_report.py  report.html
docs/: flagella_report.html  index.html
pbg_nfsim/: __init__.py  composites.py  processes.py  types.py
pbg_nfsim/models/: generate_flagella_bngl.py
tests/: test_composites.py  test_processes.py
vivarium_nfsim/: process.py
vivarium_nfsim/experiments/: flagella_complexation.py  flagella_report.py  flagella_with_production.py
vivarium_nfsim/models/: flagella_complexation.bngl  generate_flagella_bngl.py  toggle_switch.bngl
vivarium_nfsim/processes/: flagella_complexation.py  monomer_production.py
