[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-nfsim"
version = "0.1.0"
description = "Process-bigraph wrapper for BioNetGen/NFSim rule-based simulations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "process-bigraph>=0.0.10",
    "bigraph-schema",
    "bionetgen",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["pbg_nfsim*"]
